cmake_minimum_required(VERSION 3.20)

project(KeyShieldKeyboardHook LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(keyboard_hook keyboard_hook.cpp)

if (WIN32)
  target_link_libraries(keyboard_hook PRIVATE user32)
endif()
